syntax = "proto3";

package nspass.common.base.v1;

// 基础响应
message BaseResponse {
  bool success = 1;
  string message = 2;
  string error_code = 3;
}

// 基础分页
message BasePagination {
  int32 page = 1;
  int32 page_size = 2;
  int32 total = 3;
}

// 时间戳辅助
message Timestamp {
  int64 created_at = 1;
  int64 updated_at = 2;
} 